--- a/src/site/posts/2020-06-14-new-blog.md
+++ b/src/site/posts/2020-06-14-new-blog.md
@@ -3,17 +3,20 @@ title: New blog
 subtitle: My short history with blogging, and my attempt to start a new blog.
 ---
 
-I started blogging around 2005, during the heyday of [Blogger][0] and [Windows
-Live Spaces][1]. Like many high schoolers, I wrote mostly about relationships
-and school.
+I created my first blog around 2005. It was during the heyday of [Blogger][0]
+and [Windows Live Spaces][1]. Wordpress was around too, but it wasn't as
+popular as the other two among my friends.
 
 My motivation at the time was to improve my English (my second language). I
-respected bloggers who had a strong command in English, and would try to
-emulate their style using complicated words I didn't understand.
+looked up to bloggers who had a strong command of English, and would try to
+emulate their style using words I didn't understand.
 
-As years went by, I began to find my old posts embarassing. So I stopped
-blogging and deleted everything. I really wish I hadn't --- it'd be an
-interesting memory lane to walk down.
+Around the time I started college, I began to find my blog embarassing. I was
+bothered by my immaturity and writing style. So I stopped blogging and deleted
+everything. I really wish I hadn't --- it'd be an interesting memory lane to
+walk down.
+
+I've been on a writing hiatus since then.
 
 ## Why I started a new blog
 
@@ -23,7 +26,7 @@ publicize my opinions and work. I don't think this is a healthy trait to
 maintain.
 
 There are many good reasons to write. I especially like with these posts by
-Nathan Marz, which I've read many years ago but never took action on:
+Nathan Marz, which I've read years ago but never took action on:
 
 1. [You should blog even if you have no readers][2]
 2. [Break into Silicon Valley with a blog][3]
@@ -42,23 +45,24 @@ In particular, these paragraphs resonated with me:
 >
 > --- <cite>[Nathan Marz][2]</cite>
 
-I'm positive that many great writers in the tech industry, like [Paul
-Graham][4] and [patio11][5], have made similar arguments, or would be in
-agreement.
+I'm sure many prominent writers in the tech industry, like [Paul Graham][4] and
+[patio11][5], have made similar arguments, or would be in agreement.
 
 ## What I might write about
 
-I'll focus on things related to my work and interests.
+I'll focus on my work and interests.
 
 I work in tech, and spend a lot of time on programming. I often come across a
-nifty trick I never know existed, usually from Stack Overflow or some
-engineer's blog. These tips have helped solve many problems at work. For
-example, I recently learned how to use [git-commit-graph][6] to speed up
-`git log --graph`.
+nifty trick I never know existed on someone's blog. These tips have helped
+solve many problems at work.
+
+For example, I recently read about using [git-commit-graph][6] to speed up
+`git log --graph`. It was a very short blog post (I can't find the link
+anymore), but it immensely improved my productivity.
 
 I'll start with posts like that. I hope they get some hits on Google, and help
-other software apprentices like they did for me. I'll probably also write about
-things I learned (e.g. how I built this blog using [Eleventy][7]), and maybe an
+other software apprentices like they did for me. I'll also write about things I
+learned (e.g. how I built this blog using [Eleventy][7]), and maybe an
 occasional rant about the tech industry.
 
 Will I be able to keep up the commitment, or will this blog die a slow death?
