--- a/src/site/posts/2020-06-14-new-blog.md
+++ b/src/site/posts/2020-06-14-new-blog.md
@@ -11,14 +11,17 @@ My motivation at the time was to improve my English (my second language). I
 looked up to bloggers who had a strong command of English, and would try to
 emulate their style using words I didn't understand.
 
-Around the time I started college, I began to find my blog embarassing. I was
-bothered by my immaturity and writing style. So I stopped blogging and deleted
-everything. I really wish I hadn't --- it'd be an interesting memory lane to
-walk down.
+Like many high schoolers, I mostly wrote about relationships and school. As I
+entered college, I began to find my blog embarassing. So immature! So I stopped
+blogging and deleted everything.
 
-I've been on a writing hiatus since then.
+I've been on a writing hiatus since then. I wish I hadn't deleted my old
+blog --- it'd be an interesting memory lane to walk down.
 
 ## Why I started a new blog
+
+I made this blog on a whim. But as I reflect on why I should blog again, two
+reasons stand out: **embrace my fear**, and **organize my thoughts**.  
 
 I've always been curious, and slightly terrified, of how other people judge me.
 The fear of judgement followed me into adulthood, and led to my reluctance to
@@ -26,7 +29,7 @@ publicize my opinions and work. I don't think this is a healthy trait to
 maintain.
 
 There are many good reasons to write. I especially like with these posts by
-Nathan Marz, which I've read years ago but never took action on:
+Nathan Marz, which I've read many years ago but never took action on:
 
 1. [You should blog even if you have no readers][2]
 2. [Break into Silicon Valley with a blog][3]
@@ -38,9 +41,9 @@ In particular, these paragraphs resonated with me:
 > your head. Writing forces you to mature your ideas by thinking through
 > counterarguments.
 >
-> Writing helps you organize your thoughts in a coherent way. This makes you a
-> much better conversationalist when these topics come up. I can't count the
-> number of times I've had deeper conversations with people because I had
+> Writing helps you organize your thoughts in a coherent way. This makes
+> you a much better conversationalist when these topics come up. I can't count
+> the number of times I've had deeper conversations with people because I had
 > matured my ideas offline.
 >
 > --- <cite>[Nathan Marz][2]</cite>
