--- a/src/site/posts/2020-06-14-new-blog.md
+++ b/src/site/posts/2020-06-14-new-blog.md
@@ -49,7 +49,7 @@ In particular, these paragraphs resonated with me:
 > --- <cite>[Nathan Marz][2]</cite>
 
 I'm sure many prominent writers in the tech industry, like [Paul Graham][4] and
-[patio11][5], have made similar arguments, or would be in agreement.
+[patio11][5], have made similar remarks, or would be in agreement.
 
 ## What I might write about
 
