--- a/src/site/posts/2020-06-14-new-blog.md
+++ b/src/site/posts/2020-06-14-new-blog.md
@@ -1,35 +1,35 @@
 ---
-title: New blog
-subtitle: My short history with blogging, and my attempt to start a new blog.
+title: A new blog
+subtitle: My short history with blogging, and my attempt to start writing again.
 ---
 
-I created my first blog around 2005. It was during the heyday of [Blogger][0]
+I started my first blog around 2005. It was during the heyday of [Blogger][0]
 and [Windows Live Spaces][1]. Wordpress was around too, but it wasn't as
-popular as the other two among my friends.
+popular among my friends.
 
 My motivation at the time was to improve my English (my second language). I
-looked up to bloggers who had a strong command of English, and would try to
-emulate their style using words I didn't understand.
+admired bloggers who had a strong command of English, and would try to emulate
+their style with flowery language and words I didn't understand.
 
-Like many high schoolers, I mostly wrote about relationships and school. As I
-entered college, I began to find my blog embarassing. So immature! So I stopped
-blogging and deleted everything.
+Like many high schoolers, I mostly wrote about my _profound_ insights on
+relationships and school. As I entered college, I began to find my blog
+embarassing. _So immature!_ So I stopped blogging and deleted everything.
 
 I've been on a writing hiatus since then. I wish I hadn't deleted my old
-blog --- it'd be an interesting memory lane to walk down.
+blog --- it'd be a really interesting memory lane to walk down.
 
 ## Why I started a new blog
 
-I made this blog on a whim. But as I reflect on why I should blog again, two
-reasons stand out: **embrace my fear**, and **organize my thoughts**.  
+I made this blog on a whim to learn [Eleventy][1], not because I felt an urge
+to write again. But as I reflect on why I should write more, two reasons stand
+out: **embracing my fear**, and **organizing my thoughts**.  
 
-I've always been curious, and slightly terrified, of how other people judge me.
-The fear of judgement followed me into adulthood, and led to my reluctance to
-publicize my opinions and work. I don't think this is a healthy trait to
-maintain.
+I've always been curious, and slightly terrified, of how other people might
+judge me. The fear of judgement followed me into adulthood, and led to my
+reluctance to publicize my work. I don't think this is a healthy trait to keep.
 
-There are many good reasons to write. I especially like with these posts by
-Nathan Marz, which I've read many years ago but never took action on:
+There are also many good reasons to write. I especially like with these posts
+by Nathan Marz, which I've read years ago but never acted on:
 
 1. [You should blog even if you have no readers][2]
 2. [Break into Silicon Valley with a blog][3]
@@ -48,16 +48,16 @@ In particular, these paragraphs resonated with me:
 >
 > --- <cite>[Nathan Marz][2]</cite>
 
-I'm sure many prominent writers in the tech industry, like [Paul Graham][4] and
+I'm sure many prolific writers in the tech industry, like [Paul Graham][4] and
 [patio11][5], have made similar remarks, or would be in agreement.
 
 ## What I might write about
 
 I'll focus on my work and interests.
 
-I work in tech, and spend a lot of time on programming. I often come across a
-nifty trick I never know existed on someone's blog. These tips have helped
-solve many problems at work.
+I work in tech, and spend a lot of time on programming. I often come across
+nifty tips on someone's blog. These tips have helped solve many problems at
+work.
 
 For example, I recently read about using [git-commit-graph][6] to speed up
 `git log --graph`. It was a very short blog post (I can't find the link
@@ -65,7 +65,7 @@ anymore), but it immensely improved my productivity.
 
 I'll start with posts like that. I hope they get some hits on Google, and help
 other software apprentices like they did for me. I'll also write about things I
-learned (e.g. how I built this blog using [Eleventy][7]), and maybe an
+learned (e.g. how I built this website using [Eleventy][7]), and maybe an
 occasional rant about the tech industry.
 
 Will I be able to keep up the commitment, or will this blog die a slow death?
