--- a/src/site/posts/2020-06-14-new-blog.md
+++ b/src/site/posts/2020-06-14-new-blog.md
@@ -11,12 +11,12 @@ My motivation at the time was to improve my English (my second language). I
 admired bloggers who had a strong command of English, and would try to emulate
 their style with flowery language and words I didn't understand.
 
-Like many high schoolers, I mostly wrote about my _profound_ insights on
+Like many high schoolers, I mostly wrote about my _very profound insights_ on
 relationships and school. As I entered college, I began to find my blog
 embarassing. _So immature!_ So I stopped blogging and deleted everything.
 
 I've been on a writing hiatus since then. I wish I hadn't deleted my old
-blog --- it'd be a really interesting memory lane to walk down.
+blog --- it'd be an interesting memory lane to walk down.
 
 ## Why I started a new blog
 
