Fix links, rephrase a bit

--- a/src/site/posts/2020-06-14-a-new-blog.md
+++ b/src/site/posts/2020-06-14-a-new-blog.md
@@ -9,7 +9,7 @@ popular among my friends.
 
 My motivation at the time was to improve my English (my second language). I
 admired bloggers who had a strong command of English, and would try to emulate
-their style with flowery language and words I didn't understand.
+their style using words I didn't understand.
 
 Like many high schoolers, I mostly wrote about relationships and school. As I
 entered college, I began to find my blog embarassing. _So immature!_ So I
@@ -20,7 +20,7 @@ blog --- it'd be an interesting memory lane to walk down.
 
 ## Why I started a new blog
 
-I made this blog on a whim to learn [Eleventy][1], not because I felt an urge
+I made this blog on a whim to learn [Eleventy][7], not because I felt an urge
 to write again. But as I reflect on why I should write more, two reasons stand
 out: **embracing my fear**, and **organizing my thoughts**.  
 
@@ -28,13 +28,9 @@ I've always been curious, and slightly terrified, of how other people might
 judge me. The fear of judgement followed me into adulthood, and led to my
 reluctance to publicize my work. I don't think this is a healthy trait to keep.
 
-There are also many good reasons to write. I especially like with these posts
-by Nathan Marz, which I've read years ago but never acted on:
-
-1. [You should blog even if you have no readers][2]
-2. [Break into Silicon Valley with a blog][3]
-
-In particular, these paragraphs resonated with me:
+There are also many good reasons to write. I especially like [these][2]
+[posts][3] by Nathan Marz, which I've read years ago but never acted on. In
+particular, these paragraphs resonated with me:
 
 > Writing reveals holes in your thinking. When your ideas are written and
 > looking back at you, they're a lot less convincing than when they're just in
@@ -55,18 +51,18 @@ I'm sure many prolific writers in the tech industry, like [Paul Graham][4] and
 
 I'll focus on my work and interests.
 
-I work in tech, and spend a lot of time on programming. I often come across
-nifty tips on someone's blog. These tips have helped solve many problems at
-work.
+I work in tech, and naturally spend a lot of time on programming. I often come
+across nifty programing tips on someone's blog. They've helped solve many
+problems at work.
 
 For example, I recently read about using [git-commit-graph][6] to speed up
-`git log --graph`. It was a very short blog post (I can't find the link
-anymore), but it immensely improved my productivity.
+`git log --graph` from a short blog post. It immensely improved my
+productivity.
 
 I'll start with posts like that. I hope they get some hits on Google, and help
 other software apprentices like they did for me. I'll also write about things I
-learned (e.g. how I built this website using [Eleventy][7]), and maybe an
-occasional rant about the tech industry.
+learned (e.g. how I built this website), and maybe an occasional rant about the
+tech industry.
 
 Will I be able to keep up the commitment, or will this blog die a slow death?
 Who knows? Only time will tell!
